--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ course. <br><br></p>
 Jan 22
 </td>
 <td style="width:35%; text-align:left">
-<a href="syllabus.pdf">Introduction</a>
+<a href="https://merlinudinov.github.io/spring2026ling201/20260122">Introduction</a>
 </td>
 <td style="width:48%; text-align:left">
 </td>
