--- a/icebreaking/index.html
+++ b/icebreaking/index.html
@@ -22,7 +22,7 @@ class: center, middle, inverse, title-slide
 ### Department of Linguistics, Rutgers University
 ]
 .date[
-### 2026/01/22 (updated: 2026-01-18)
+### 2026/01/22 (updated: 2026-01-22)
 ]
 
 ---
@@ -40,7 +40,7 @@ class: center, middle, inverse, title-slide
 ### &lt;span style="color:green"&gt;INFJ&lt;/span&gt;
 ]
 .pull-right[
-![width=80%](../pic/0905/lakeb.jpg)
+![width=80%](../pic/0122/lakeb.jpg)
 &lt;br&gt;&lt;br&gt;
 *Lake Balkhash, space view*
 ]
@@ -48,7 +48,7 @@ class: center, middle, inverse, title-slide
 ## You Are All Sherlock Holmes Now
 &lt;br&gt;
 .pull-left[
-&lt;img src="../pic/0905/holmes.png" width="70%"&gt;
+&lt;img src="../pic/0122/holmes.png" width="70%"&gt;
 ]
 
 .pull-right[
@@ -71,11 +71,11 @@ class: center, middle
 2. Write your **First Name**.**Last Name** (**Preferred Name**) and (**Preferred Pronouns**) on the name tag &lt;br&gt;&lt;br&gt;
 3. One by one, introduce yourself to the group, tell others: &lt;br&gt;&lt;br&gt;
   - Your name and your preferred name
-  - Your favourite colour&lt;br&gt;&lt;br&gt;
-4. When introducing, write down the way you pronounce your name though it might be spelt in another way &lt;br&gt;&lt;br&gt;
+  - Your major&lt;br&gt;&lt;br&gt;
+4. When introducing, write down the way you pronounce your name though **it might be spelt in another way** &lt;br&gt;&lt;br&gt;
 5. One representative from each group write down name pronunciation of everyone in the group on the board&lt;br&gt;&lt;br&gt;&lt;br&gt;&lt;br&gt;
 
-**NOTE**: REMEMBER TO **REMEMBER** OTHERS NAMES AND COLOURS, I WILL ASK! &amp; BE **CREATIVE**!
+**NOTE**: REMEMBER TO **REMEMBER** OTHERS NAMES AND MAJORS, I WILL ASK! &amp; BE **CREATIVE**!
 
 
 
