--- a/index.html
+++ b/index.html
@@ -445,10 +445,11 @@ Jan 22
 Jan 26
 </td>
 <td style="width:35%; text-align:left">
-Linguistics as a Science
+<a href="https://merlinudinov.github.io/spring2026ling201/20260126">Linguistics
+as a Science</a>
 </td>
 <td style="width:48%; text-align:left">
-Reading: Think like a Linguist
+Reading: <i>Thinking like a Linguist</i>
 </td>
 <td style="width:2%; text-align:center">
 </td>
