--- a/index.html
+++ b/index.html
@@ -445,8 +445,7 @@ Jan 22
 Jan 26
 </td>
 <td style="width:35%; text-align:left">
-<a href="https://merlinudinov.github.io/spring2026ling201/20260126">Linguistics
-as a Science</a>
+Linguistics as a Science
 </td>
 <td style="width:48%; text-align:left">
 Reading: <i>Thinking like a Linguist</i>
