--- a/index.html
+++ b/index.html
@@ -445,10 +445,11 @@ Jan 22
 Jan 26
 </td>
 <td style="width:35%; text-align:left">
-Linguistics as a Science
+<a href="https://merlinudinov.github.io/spring2026ling201/20260126">Linguistics
+as a Science</a>
 </td>
 <td style="width:48%; text-align:left">
-Reading: <i>Thinking like a Linguist</i>
+<b><u>Reading</u></b>: <i>Thinking like a Linguist</i>
 </td>
 <td style="width:2%; text-align:center">
 </td>
@@ -465,6 +466,8 @@ Jan 29
 Morphology I
 </td>
 <td style="width:48%; text-align:left">
+<b><u>Reading</u></b>: Sections 4.0, 4.1 and 4.2 of Chapter 4:
+Morphology from <i>Language Files</i>
 </td>
 <td style="width:2%; text-align:center">
 </td>
@@ -498,6 +501,8 @@ Feb 05
 Morphology III
 </td>
 <td style="width:48%; text-align:left">
+<b><u>Reading</u></b>: Sections 4.3, 4.4 and 4.5 of Chapter 4:
+Morphology from <i>Language Files</i>
 </td>
 <td style="width:2%; text-align:center">
 </td>
@@ -531,6 +536,7 @@ Feb 12
 Syntax I
 </td>
 <td style="width:48%; text-align:left">
+<b><u>Homework I: Morphology</u></b> due on Feb 15
 </td>
 <td style="width:2%; text-align:center">
 </td>
@@ -564,6 +570,7 @@ Feb 19
 Syntax III
 </td>
 <td style="width:48%; text-align:left">
+<b><u>Homework II: Syntax I</u></b> due on Feb 22
 </td>
 <td style="width:2%; text-align:center">
 </td>
@@ -597,6 +604,7 @@ Feb 26
 Review
 </td>
 <td style="width:48%; text-align:left">
+<b><u>Homework III: Syntax II</u></b> due on Mar 01
 </td>
 <td style="width:2%; text-align:center">
 </td>
@@ -708,6 +716,7 @@ Mar 26
 Semantics IV
 </td>
 <td style="width:48%; text-align:left">
+<b><u>Homework IV: Semantics</u></b> due on Mar 29
 </td>
 <td style="width:2%; text-align:center">
 </td>
@@ -741,6 +750,7 @@ Apr 02
 Pragmatics II
 </td>
 <td style="width:48%; text-align:left">
+<b><u>Homework V: Pragmatics</u></b> due on Apr 05
 </td>
 <td style="width:2%; text-align:center">
 </td>
@@ -807,6 +817,7 @@ Apr 16
 Phonetics IV
 </td>
 <td style="width:48%; text-align:left">
+<b><u>Homework VI: Phonetics</u></b> due on Apr 19
 </td>
 <td style="width:2%; text-align:center">
 </td>
@@ -840,6 +851,7 @@ Apr 23
 Phonology II
 </td>
 <td style="width:48%; text-align:left">
+<b><u>Homework VII: Phonology I</u></b> due on Apr 26
 </td>
 <td style="width:2%; text-align:center">
 </td>
@@ -873,6 +885,7 @@ Apr 30
 Phonology IV
 </td>
 <td style="width:48%; text-align:left">
+<b><u>Homework VIII: Phonology II</u></b> due on May 03
 </td>
 <td style="width:2%; text-align:center">
 </td>
